--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Momentum</title>
 </head>
 <body>
@@ -12,7 +12,9 @@
         <button>Log In</button>
     </form>
     <h1 id="greeting" class="hidden"></h1>
-    <a href="https://www.google.com">Go to google</a>
-    <script src="app.js"></script>
+    <h2 id="clock">00:00</h2>
+
+    <script src="js/greeting.js"></script>
+    <script src="js/clock.js"></script>
 </body>
 </html>
