--- a/index.html
+++ b/index.html
@@ -7,28 +7,37 @@
     <title>Momentum</title>
 </head>
 <body>
-    <h2 id="clock">00:00:00</h2>
+    <div class="contents">
+        <h2 id="clock">00:00:00</h2>
     
-    <form id="login-form" class="hidden">
+        <form id="login-form" class="hidden">
         <input required maxlength="15" type="text" placeholder="What is your name?" />
         <button>Log In</button>
-    </form>
-    <h1 id="greeting" class="hidden"></h1>
+        </form>
+        <h1 id="greeting" class="hidden"></h1>
 
-    <form id="todo-form">
-        <input type="text" placeholder="Write a To Do and Press Enter" />
-    </form>
-    <ul id="todo-list"></ul>
+        <div class="contents_todo">
+            <form id="todo-form">
+                <input type="text" placeholder="Write a To Do and Press Enter" />
+            </form>
+            <ul id="todo-list"></ul>
+        </div>
 
-    <div id="quote">
+        <div id="quote">
         <span></span>
         <span></span>
+        </div>
+
+        <div id="weather">
+        <span></span>
+        <span></span>
+        </div>
     </div>
-
     <script src="js/greeting.js"></script>
     <script src="js/clock.js"></script>
     <script src="js/quotes.js"></script>
     <script src="js/background.js"></script>
     <script src="js/todo.js"></script>
+    <script src="js/weather.js"></script>
 </body>
 </html>
